# remote-control

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFLUENCE.html  CONFLUENCE.md  DESIGN.md  DISTRIBUTION.md  INTEGRATION.md  PRD.md  features.html
scripts/: build_dist.sh  run_dev.sh  run_learning.sh
src/remotectl/: autolearn.py  config.py  goals.py  identify.py  mcp_server.py  models.py  navmap.py  reconcile.py  store.py
src/remotectl/api/: app.py  deps.py
src/remotectl/api/static/: app.js  index.html  styles.css
src/remotectl/drivers/: __init__.py  base.py  mcp_client.py  mock.py
src/remotectl/engine/: executor.py  hooks.py  learner.py  planner.py
src/remotectl/sense/: __init__.py  base.py  detection_mcp.py  mock.py
tests/: test_api_smoke.py  test_autolearn_keyscreen.py  test_coverage_keyset.py  test_drivers_sense_contract.py  test_llm_error_recognition.py  test_mcp_server.py  test_pipeline_e2e.py
